# cheesecake

./: .env  .gitignore  CLI_TODO.md  Cargo.toml  Makefile  README.md  build-assets.js  package.json  pnpm-lock.yaml
.github/workflows/: rust.yml
app/: Cargo.toml  logging.rs  main.rs
app/controller/: Cargo.toml  lib.rs
app/controller/root/: mod.rs
app/controllers/: index.rs  lib.rs
app/environment/: Cargo.toml  environment.rs  lib.rs
app/types/: Cargo.toml
app/view/: Cargo.toml  lib.rs
app/view/root/: mod.rs
app/views/: index.rs
base/: .editorconfig  Makefile  build-assets.js  pnpm-lock.yaml
base/app/controllers/: index.rs
base/db/entities/src/: user.rs
base/db/migrations/src/: m20220101_000001_create_table.rs
cli/: Cargo.toml
config/: lib.rs
config/app/: app_state.rs  env.rs  lifecycle.rs  mod.rs  routing.rs
config/velvet/: app_state.rs  controller.rs  env_utils.rs  logging.rs  mod.rs  routing.rs
controller/: Cargo.toml  lib.rs
controller/root/: mod.rs
database/: .env  Cargo.toml  lib.rs
database/entities/: user.rs
database/migrator/: m20250328_001_create_user_table.rs  mod.rs
environment/: environment.rs
migrations/: README.md
model/: Cargo.toml  app_state.rs
public/: base.css
resources/templates/: base.html  index.html
src/: controller.rs  helpers.rs  lifecycle.rs  main.rs  migration.rs  model.rs  view.rs
storage/: README.md
types/: Cargo.toml  app_error.rs
view/: Cargo.toml  lib.rs
view/core/: mod.rs
view/root/: mod.rs
view/templates/: base.html  index.html
