[package]
name = "cheesecake"
version = "0.1.0"
description = "Cheesecake CLI tool"
edition = "2024"

[[bin]]
name = "cake"
path = "src/main.rs"

[profile.release]
opt-level = "s"
strip = true
lto = "thin"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.34", features = ["derive"] }
dirs = "6.0.0"
git2 = "0.20.1"
indicatif = "0.17.11"
