[package]
name = "app"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "app"
path = "main.rs"

[dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
database = { path = "../database" }
model = { path = "../model" }
controller = { path = "../controller" }
axum = "0.8.1"
view = { path = "../view" }
clap = "4.5.34"
