[package]
name = "app"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "app"
path = "main.rs"

[dependencies]
tokio = { version = "1.44.1", features = ["rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
types = { path = "types" }
controller = { path = "controller" }
axum = "0.8.1"
view = { path = "view" }
environment = { path = "environment" }
anyhow = "1.0.97"
tracing-appender = "0.2.3"
chrono = "0.4.40"
sea-orm = { version = "1.1.8", features = ["runtime-tokio"] }
