[package]
name = "database"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
axum = "0.8.1"
sea-orm = { version = "1.1.7", features = ["sqlx-sqlite", "runtime-tokio", "macros"] }
sea-orm-migration = "1.1.7"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
